Added gamemode description, changed variable names to be clearer

--- a/converter.html
+++ b/converter.html
@@ -39,13 +39,13 @@
             <input class="textInput" type="text" id="stopTimeInput" value="100">
 
             <div class="tooltipWrapper">
-                <div class="tooltip">Max Voices:
+                <div class="tooltip">Max Pitches:
                     <span class="tooltipText">Maximum amount of pitches that will be playing
                         at any given time, between 1 and 11. If there are more, they are discarded.
-                        Fewer voices may result in better performance.</span>
+                        Fewer pitches may result in better performance.</span>
                 </div>
             </div>
-            <input class="textInput" type="text" id="maxVoicesInput" value="6">
+            <input class="textInput" type="text" id="maxPitchesInput" value="6">
 
             <div class="tooltipWrapper">
                 <div class="tooltip">Max Array Elements:
