Added link to instructions and settings image link

--- a/converter.html
+++ b/converter.html
@@ -16,11 +16,13 @@
 
         <div>
             <p>Upload .mid file:
-                <input type="file" id="file-input" accept="audio/midi"></input>
+                <input type="file" id="file-input" accept="audio/midi">
             </p>
         </div>
 
-        <p>(Hover over the texts for more information)</p>
+        <p>Hover over the texts for more information.<br>
+
+        <a href ="https://github.com/ScroogeD2/owmidiconverter#how-to-use">Click here for instructions</a></p>
         <div class="options">
             <div class="tooltipWrapper">
                 <div class="tooltip">Start At:
@@ -95,7 +97,7 @@
         <p>Script info:</p>
         <textarea readonly id="scriptOutput-textarea" rows="7"></textarea>
 
-        <p>Copy these settings and paste them to the Custom Game Settings screen:</p>
+        <p>Copy these settings and paste them to the <a href="https://i.imgur.com/OqkaGqe.png">Custom Game Settings screen.</a></p>
 
         <!-- todo: fix textarea lag issues with Chrome -->
         <textarea readonly id="ruleOutput-textarea" rows="5" wrap="off" 
