Increased tooltip width slightly for better readability

--- a/converter.html
+++ b/converter.html
@@ -190,7 +190,7 @@
             FILE_FORMAT_ERROR: "Error: the uploaded file could not be read as a MIDI file.\n"
         };
 
-        // maximum amount of players in an Overwatch match
+        // Maximum amount of players in an Overwatch match
         const MAX_PLAYERS = 12;
 
 
