Temporarily disabled ban system (not working properly)

--- a/converter.html
+++ b/converter.html
@@ -128,14 +128,15 @@
                     </div>
                 </div>
                 <input class="checkboxInput" type="checkbox" id="restrictAbilitiesCheckbox">
-
+                <!--
                 <div class="tooltipWrapper">
                     <div class="tooltip">Bans for host player
                         <span class="tooltipText">Include a ban system for temporarily removing troublemakers: 
-                            When host player presses Reload (R), the player he is aiming towards will be teleported out for 30 seconds.</span>
+                            When host player presses Reload (R) + Crouch (Ctrl), the player he is aiming towards will be teleported out for 30 seconds.</span>
                     </div>
                 </div>
                 <input class="checkboxInput" type="checkbox" id="includeBanSystemCheckbox">
+                -->
 
             </div>
         </div>
