Changed restricted player slots to be on by default

--- a/converter.html
+++ b/converter.html
@@ -93,7 +93,7 @@
                             Enabling this ensures that bots will never despawn due to joining players.</span>
                     </div>
                 </div>
-                <input class="checkboxInput" type="checkbox" id="restrictSlotsCheckbox">
+                <input class="checkboxInput" type="checkbox" id="restrictSlotsCheckbox" checked>
 
                 <div class="tooltipWrapper">
                     <div class="tooltip">Choose piano:
