Updated readme and converter page to add notes for console users

--- a/converter.html
+++ b/converter.html
@@ -126,7 +126,7 @@
         <p>Script info:</p>
         <textarea readonly id="scriptOutput-textarea" rows="7"></textarea>
 
-        <p>Copy these settings and paste them to the <a href="https://i.imgur.com/OqkaGqe.png">Custom Game Settings screen:</a></p>
+        <p>Copy these settings and paste them to the <a href="https://i.imgur.com/OqkaGqe.png">Custom Game Settings screen.</a> (PC only)</p>
         
         <button id="copyRuleButton" onclick="copyText('ruleOutput-textarea')">Copy to clipboard</button>
 
