--- a/converter.html
+++ b/converter.html
@@ -83,7 +83,7 @@
                         <span class="tooltipText">Make the bots playing the song invisible. Their primary fire remains visible.</span>
                     </div>
                 </div>
-                <input class="checkboxInput" type="checkbox" id="botsInvisibleCheckbox" checked>
+                <input class="checkboxInput" type="checkbox" id="botsInvisibleCheckbox">
 
                 <div class="tooltipWrapper">
                     <div class="tooltip">Limit player slots
@@ -293,7 +293,7 @@
             let convertedMidi = {};
             
             try {
-                convertedMidi = convertMidi(mid, converterSettings);
+                convertedMidi = convertMidi(mid, converterSettings, true);
             }
             catch (error) {
                 updateElementValue("scriptOutput-textarea", ERRORS["MIDI_CONVERTER_ERROR"]);
