Fixed a bug that caused the decompression algorithm to read the last element of the compressed array wrong. refactored "Decompress all arrays" rule into a loop.

--- a/converter.html
+++ b/converter.html
@@ -72,8 +72,7 @@
             <div class="options">
                 <div class="tooltipWrapper">
                     <div class="tooltip">Generate Full Gamemode Settings
-                        <span class="tooltipText">If unchecked, only the workshop rules containing the song will be generated. 
-                            Make sure to remove all "Song Data" rules before pasting in the new script.</span>
+                        <span class="tooltipText">If unchecked, only the workshop rules containing the song data will be generated.</span>
                     </div>
                 </div>
                 <input class="checkboxInput" type="checkbox" id="includeFullSettingsCheckBox" checked>
