Added double backslashes to ingame strings to make sure they can be copypasted correctly, commented out scaling features in a way that is compatible with both overwatch and overpy

--- a/converter.html
+++ b/converter.html
@@ -82,7 +82,7 @@
                         <span class="tooltipText">Make the bots playing the song invisible. Their primary fire remains visible.</span>
                     </div>
                 </div>
-                <input class="checkboxInput" type="checkbox" id="botsInvisibleCheckbox">
+                <input class="checkboxInput" type="checkbox" id="botsInvisibleCheckbox" checked>
 
                 <div class="tooltipWrapper">
                     <div class="tooltip">Limit player slots
