Converter instructions link now opens a new tab

--- a/converter.html
+++ b/converter.html
@@ -21,7 +21,7 @@
         </div>
 
         <p>Hover over the texts for more information.<br>
-        <a href ="https://github.com/ScroogeD2/owmidiconverter#how-to-use">Click here for instructions</a></p>
+        <a href ="https://github.com/ScroogeD2/owmidiconverter#how-to-use" target="_blank">Click here for instructions</a></p>
 
         <div class="options">
             <div class="tooltipWrapper">
