Updated for Overwatch patch 1.54

--- a/converter.html
+++ b/converter.html
@@ -44,12 +44,13 @@
             <input class="textInput" type="text" id="voicesInput" value="6">
 
             <div class="tooltipWrapper">
-                <div class="tooltip">Language:
-                    <span class="tooltipText">Language of the generated workshop script. 
+                <div class="tooltip">(CURRENTLY BROKEN) Language:
+                    <span class="tooltipText">CURRENTLY BROKEN DUE TO NEW UPDATE, ONLY ENGLISH WORKS. WILL BE FIXED SOON.
+                        Language of the generated workshop script. 
                         Choose the same language as your game's text language, otherwise the script can't be imported.</span>
                 </div>
             </div>
-            <select class="dropdownInput" id="languageInput">
+            <select class="dropdownInput" id="languageInput" disabled>
                 <option selected value="en-US">English</option>
                 <option value="es-ES">Español (EU)</option>
                 <option value="es-MX">Español (AL)</option>
